--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: php
 
 matrix:
     include:
+        - php: 5.5
         - php: 5.6
         - php: hhvm-nightly
     allow_failures:
+        - php: 5.5
         - php: hhvm-nightly
     fast_finish: true
 
