--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
     - if [ "$TRAVIS_BRANCH" = "master" ]; then export COMPOSER_ROOT_VERSION=dev-master; else export COMPOSER_ROOT_VERSION="$TRAVIS_BRANCH".x-dev; fi;
 
 install:
-    - composer --prefer-source install; fi;
+    - composer --prefer-source install
 
 scripts:
     - vendor/bin/phpunit --exclude-group tty,benchmark,intl-data
