--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: php
 matrix:
     include:
         - php: 5.6
-        - php: 7.0
+        - php: nightly
         - php: hhvm-nightly
     allow_failures:
-        - php: 7.0
+        - php: nightly
         - php: hhvm-nightly
     fast_finish: true
 
